// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildTestStepsFromRules should create test step configs for the rule given: render path - null 1`] = `
<AssessmentInstanceDetailsColumn
  background={null}
  customClassName="not-applicable"
  labelText={null}
  textContent=""
  tooltipId={null}
/>
`;

exports[`buildTestStepsFromRules should create test step configs for the rule given: render path - null 2`] = `
<AssessmentInstanceDetailsColumn
  background={null}
  customClassName="not-applicable"
  labelText={null}
  textContent=""
  tooltipId={null}
/>
`;

exports[`buildTestStepsFromRules should create test step configs for the rule given: render path - one 1`] = `
<AssessmentInstanceDetailsColumn
  background={null}
  customClassName="not-applicable"
  labelText={null}
  textContent="A"
  tooltipId={null}
/>
`;

exports[`buildTestStepsFromRules should create test step configs for the rule given: render path - one 2`] = `
<AssessmentInstanceDetailsColumn
  background={null}
  customClassName="not-applicable"
  labelText={null}
  textContent="A"
  tooltipId={null}
/>
`;

exports[`buildTestStepsFromRules should create test step configs for the rule given: render path - two 1`] = `
<AssessmentInstanceDetailsColumn
  background={null}
  customClassName="not-applicable"
  labelText={null}
  textContent="A;B"
  tooltipId={null}
/>
`;

exports[`buildTestStepsFromRules should create test step configs for the rule given: render path - two 2`] = `
<AssessmentInstanceDetailsColumn
  background={null}
  customClassName="not-applicable"
  labelText={null}
  textContent="A;B"
  tooltipId={null}
/>
`;

exports[`buildTestStepsFromRules should create test step configs for the rule given: render snippet - null 1`] = `
<AssessmentInstanceDetailsColumn
  background={null}
  customClassName="not-applicable"
  labelText={null}
  textContent={null}
  tooltipId={null}
/>
`;

exports[`buildTestStepsFromRules should create test step configs for the rule given: render snippet - null 2`] = `
<AssessmentInstanceDetailsColumn
  background={null}
  customClassName="not-applicable"
  labelText={null}
  textContent={null}
  tooltipId={null}
/>
`;

exports[`buildTestStepsFromRules should create test step configs for the rule given: render snippet - one 1`] = `
<AssessmentInstanceDetailsColumn
  background={null}
  customClassName="not-applicable"
  labelText={null}
  textContent="X"
  tooltipId={null}
/>
`;

exports[`buildTestStepsFromRules should create test step configs for the rule given: render snippet - one 2`] = `
<AssessmentInstanceDetailsColumn
  background={null}
  customClassName="not-applicable"
  labelText={null}
  textContent="X"
  tooltipId={null}
/>
`;

exports[`buildTestStepsFromRules should create test step configs for the rule given: render snippet - two 1`] = `
<AssessmentInstanceDetailsColumn
  background={null}
  customClassName="not-applicable"
  labelText={null}
  textContent="XY"
  tooltipId={null}
/>
`;

exports[`buildTestStepsFromRules should create test step configs for the rule given: render snippet - two 2`] = `
<AssessmentInstanceDetailsColumn
  background={null}
  customClassName="not-applicable"
  labelText={null}
  textContent="XY"
  tooltipId={null}
/>
`;
